GeonetCab: fix metamap.put() + mispelling